# prosante-connect-synapse-module

./: README.md  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  lint.yml  test.yml
docker-test-config/mx-conf/: homeserver.yaml
psc_mapping_provider/: __init__.py
tests/: test_mapping.py
