[project]
name = "eimis-prosante-connect-module"
description = "A synapse module used by EIMIS to filter and map users registered through Prosanté Connect"
authors = [
    { name = "Eimis team", email = "eimis@beta.gouv.fr" },
]
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "authlib >=0.15.1",
    "unpaddedbase64 >=2.1.0",
    "jinja2 >=3.0",
    "pymacaroons >=0.13.0",
    "twisted >=18.9.0"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
ALONE = ["matrix-synapse>=1.98.0"]
